--- a/UniQuiz.html
+++ b/UniQuiz.html
@@ -7,10 +7,23 @@
     <link rel="stylesheet" href="./UniQuiz_files/estilo.css">
 </head>
 <body>
-    <div class="body"></div>
-    <div class="bloco-central"></div>
-    <div class="img">
+    <div class="body"> </div>
+    <div class="bloco-central img">
         <img src="./UniQuiz_files/uma-celula-inteira-e-processo-de-divisao-celular-no-modelo-visual_124507-30913.jpg" alt="celula">
+        <div class="retagulos-container">
+
+            <div class="lado">
+                <div class="retangulo"></div>
+                <div class="retangulo"></div>
+            </div>
+
+            <div class="lado">
+                <div class="retangulo"></div>
+                <div class="retangulo"></div>
+            </div>
+
+        </div>
     </div>
+
 
 </body></html>
