--- a/AtivDanielaPetshop.html
+++ b/AtivDanielaPetshop.html
@@ -3,7 +3,7 @@
 <html lang="pt-br"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade dia 16/06/25</title>
+    <title>Atividade Daniela dia 16/06/25</title>
 </head>
 <body>
     <script>
