--- a/ExemploForAulaDani.html
+++ b/ExemploForAulaDani.html
@@ -50,7 +50,7 @@
 
         /*var SomaMult = 0
         var Mult = Number (prompt("Informe o numero que vc deseja saber os mult: "))
-        var Começo = Number (prompt("Informe o numero que vc deseja que comece: "))
+        var Comeco = Number (prompt("Informe o numero que vc deseja que comece: "))
         var Final = Number (prompt("Informe o numero que vc deseja que termine: ")) 
         for(let x = Começo; x <= Final; x++){
             if(x % Mult == 0){
@@ -59,12 +59,13 @@
         }
         alert(SomaMult)*/
 
-        var Tabuada = Number (prompt("Informe qual tabuada vc quer saber: "))
-        var resultado
+        
+        /*var Tabuada = Number (prompt("Informe qual tabuada vc quer saber: "))
+        var Resultado
         for(let x = 1; x <= 10; x++){
-            resultado = Tabuada * x
-            alert(Tabuada + " x " + x + " = " + resultado)
-        }
+            Resultado = Tabuada * x
+            alert(Tabuada + " x " + x + " = " + Resultado)
+        }*/
 
     </script>
 
