--- a/ExemploForAulaDani.html
+++ b/ExemploForAulaDani.html
@@ -60,7 +60,7 @@
         alert(SomaMult)*/
 
         
-        /*var Tabuada = Number (prompt("Informe qual tabuada vc quer saber: "))
+        /*var Tabuada = Number (prompt("Informe qual tabuada vc quer saber de 1 a 10: "))
         var Resultado
         for(let x = 1; x <= 10; x++){
             Resultado = Tabuada * x
