--- a/ExemploForAulaDani.html
+++ b/ExemploForAulaDani.html
@@ -50,8 +50,8 @@
 
         /*var SomaMult = 0
         var Mult = Number (prompt("Informe o numero que vc deseja saber os mult: "))
-        var Comeco = Number (prompt("Informe o numero que vc deseja que comece: "))
-        var Final = Number (prompt("Informe o numero que vc deseja que termine: ")) 
+        var Inicio = Number (prompt("Informe o numero que vc deseja que comece: "))
+        var Fim = Number (prompt("Informe o numero que vc deseja que termine: ")) 
         for(let x = Começo; x <= Final; x++){
             if(x % Mult == 0){
                 SomaMult = SomaMult + x
@@ -59,10 +59,12 @@
         }
         alert(SomaMult)*/
 
-        
-        /*var Tabuada = Number (prompt("Informe qual tabuada vc quer saber de 1 a 10: "))
+
+        /*var Inicio = Number (prompt("Informe o inicio: "))
+        var Fim = Number (prompt("Informe o fim: "))
+        var Tabuada = Number (prompt("Informe qual tabuada vc quer saber de 1 a 10: "))
         var Resultado
-        for(let x = 1; x <= 10; x++){
+        for(let x = Inicio; x <= Fim; x++){
             Resultado = Tabuada * x
             alert(Tabuada + " x " + x + " = " + Resultado)
         }*/
