--- a/AtivJSPablo2.html
+++ b/AtivJSPablo2.html
@@ -1,3 +1,5 @@
+Dia 08/07/25
+
 1. Soma de 1 a 100
 Escreva um algoritmo que use a estrutura enquanto para somar todos os números de 1 a 100 e mostre o resultado final.
 <let contador = 1;
